--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-td-techno",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -12,7 +12,10 @@
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "typescript": "^4.6.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
